--- a/Cafe-Management-Service/src/main/resources/application.properties
+++ b/Cafe-Management-Service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/cafemangement
+spring.datasource.username=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.properties.hibernate.format_sql=true
 
+server.port=8089
+server.servlet.context-path=/cafe
