--- a/Cafe-Management-Service/src/main/resources/application.properties
+++ b/Cafe-Management-Service/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8089
 server.servlet.context-path=/cafe
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=goyalmunish9906@gmail.com
+spring.mail.password=hoccuoihxseikwmr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
