encrypted the username and password for email func

--- a/Cafe-Management-Service/src/main/resources/application.properties
+++ b/Cafe-Management-Service/src/main/resources/application.properties
@@ -9,9 +9,12 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8089
 server.servlet.context-path=/cafe
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=ENC(Ncks8X/NYCF+vj2XOh/g7ewpLtocsNv6)
 spring.mail.port=587
-spring.mail.username=goyalmunish9906@gmail.com
-spring.mail.password=hoccuoihxseikwmr
+spring.mail.username=ENC(Ah1XDhviFspbr9WXj8u1VkjVK6L819ChTEYHzM26FTPQZfgW8ZQicw==)
+spring.mail.password=ENC(NSkaLYgOao0iqrbgqq0qJLpL840WyCCFKyBmZZvKRkI=)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+jasypt.encryptor.algorithm=PBEWithMD5AndTripleDES
+jasypt.encryptor.iv-generator-classname= org.jasypt.iv.NoIvGenerator
